[package]
name = "MatlabScript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.14.0"
futures = "0.3.26"
reqwest = {version = "0.11.14", features = ["json"]}
serde = {version = "1.0.152", features = ["derive"]}
tokio = {version = "1.25.0", features = ["macros", "io-util", "rt-multi-thread"]}


